--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ padding: 0 25px 0 25px;
 
 .nav li a:hover {
 
-    color: lightgray; 
+    color: burlywood; 
 
 }
 
@@ -67,15 +67,7 @@ padding: 0 25px 0 25px;
     clear: both;
   }
   
-  /* Responsive columns */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-  }
-  
+ 
   /* Style the counter cards */
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -84,4 +76,103 @@ padding: 0 25px 0 25px;
     background-color: #f1f1f1;
   }
 
+/* Another content section */
 
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.btn {
+  padding: .5rem 1rem;
+  background: lightgray;
+  color: black;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  text-decoration: none;
+}
+.btn:hover {
+color: burlywood !important;
+background: lightgray;
+
+}
+
+.content {
+  width: 90%;
+  margin: 30px auto 30px;
+}
+
+.content .main-content {
+width: 70%;
+float: left;
+}
+
+.content .main-content .post {
+  width: 95%;
+  height: 270px;
+  margin: 20px auto;
+  border-radius: 5px;
+  background: lightyellow;
+  position: relative;
+}
+
+.content .main-content .post .read-more {
+  position: absolute;
+  bottom: 10px;
+  border: 1px solid burlywood;
+  background: transparent;
+  border-radius: 0px;
+  color: black !important;
+}
+
+.content .main-content .post .read-more:hover {
+  background: burlywood;
+  color: black !important;
+  transition: .25s;
+}
+
+.content .main-content .post .post-image {
+  width: 40%;
+  height: 100%;
+  float: left;
+}
+
+.content .main-content .post .post-preview {
+  width: 60%;
+  padding: 15px;
+  float: right;
+}
+
+.content .main-content .recent-post-title {
+margin: 20px;
+
+}
+
+.content .sidebar {
+width: 30%;
+float: left;
+border: 1px dashed green;
+height: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+ /* Responsive columns */
+  @media only screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
