--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-.body{
-
+.html body{
+  height: 100%;
     margin: 0;
     padding: 0;
     font-family: "arial, serif";
+
+}
+
+.page-wrapper {
+min-height: 100%;
+
 }
 
     .nav {
-
         background-color: white;
         color: black;
         list-style: none;
@@ -160,6 +165,68 @@ height: 300px;
 
 
 
+/* Footer */
+.footer {
+  background: black;
+  color: white;
+  height: 400px;
+  position: relative;
+}
+
+.footer .footer-content {
+  border: 1px solid red;
+  height: 350px;
+  display: flex;
+
+}
+
+.footer .footer-content .footer-section {
+  flex: 1;
+  padding: 25px;
+  border: 1px solid white;
+}
+
+.footer .footer-content h1, .footer .footer-content h2 {
+color: white;
+}
+
+.footer .footer-content .about .contatct span {
+  display: block;
+  font-size: 1.1rem;
+  margin: 8px;
+}
+
+.footer .footer-content .about .socials a {
+  border: 1px solid gray;
+  width: 45px;
+  height: 41px;
+  padding-top: 5px;
+  margin-right: 5px;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.3rem;
+  border-radius: 5px;
+  transition: all .3s;
+}
+
+.footer .footer-content .about .socials a:hover {
+border: 1px solid white;
+color: white;
+transition: all .3s;
+}
+
+.footer .footer-bottom {
+background: darkgray;
+color: black;
+height: 50px;
+width: 100%;
+text-align: center;
+position: absolute;
+bottom: 0px;
+left: 0px;
+padding-top: 20px;
+
+}
 
 
 
@@ -168,11 +235,10 @@ height: 300px;
 
 
  /* Responsive columns */
-  @media only screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
+ @media only screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
   }
-  
+}
