--- a/style.css
+++ b/style.css
@@ -161,6 +161,51 @@ border: 1px dashed green;
 height: 300px;
 }
 
+/* User profile card starts  */
+
+.main-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.card-title {
+  color: grey;
+  font-size: 18px;
+}
+
+.card-button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card-icon a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  margin: 10px;
+}
+
+.card-button:hover, a:hover {
+  opacity: 0.7;
+}
+
+
+/* User profile card ends */
+
+
+
+
 
 
 
