--- a/style.css
+++ b/style.css
@@ -97,8 +97,14 @@ padding: 0 25px 0 25px;
   border-radius: .25rem;
   text-decoration: none;
 }
+
+.btn-big {
+padding: .7rem 1.3rem;
+line-height: 1.3rem;
+}
+
 .btn:hover {
-color: burlywood !important;
+color: rgb(128, 79, 16) !important;
 background: lightgray;
 
 }
@@ -169,6 +175,7 @@ height: 300px;
   margin: auto;
   text-align: center;
   font-family: arial;
+  background-color: blanchedalmond;
 }
 
 .card-title {
@@ -228,14 +235,13 @@ left:40%;
 
 /* Footer */
 .footer {
-  background: black;
+  background: rgb(34, 33, 33);
   color: white;
   height: 400px;
   position: relative;
 }
 
 .footer .footer-content {
-  border: 1px solid red;
   height: 350px;
   display: flex;
 
@@ -244,16 +250,15 @@ left:40%;
 .footer .footer-content .footer-section {
   flex: 1;
   padding: 25px;
-  border: 1px solid white;
 }
 
 .footer .footer-content h1, .footer .footer-content h2 {
 color: white;
 }
 
-.footer .footer-content .about .contatct span {
+.footer .footer-content .about .contact span {
   display: block;
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: 8px;
 }
 
@@ -268,6 +273,7 @@ color: white;
   font-size: 1.3rem;
   border-radius: 5px;
   transition: all .3s;
+  color: white;
 }
 
 .footer .footer-content .about .socials a:hover {
@@ -276,9 +282,42 @@ color: white;
 transition: all .3s;
 }
 
+.footer .footer-content .links ul a {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  color: white;
+  text-decoration: none;
+}
+
+.footer .footer-content .links ul a:hover{
+color: white;
+margin-left: 15px;
+transition: all .3s;
+
+}
+
+.footer .footer-content .contact-form .contact-input{
+background: rgb(14, 13, 13);
+color: white;
+margin-bottom: 10px;
+line-height: 1.5rem;
+padding: .9rem 1.4rem;
+border: none;
+
+}
+
+.footer .footer-content .contact-form .contact-input:focus{
+background: black;
+}
+
+.footer .footer-content .contact-form .contact-btn{
+  float: right;
+}
+
 .footer .footer-bottom {
-background: darkgray;
-color: black;
+background: rgb(70, 68, 68);
+color: rgb(255, 255, 255);
 height: 50px;
 width: 100%;
 text-align: center;
