--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-.html body{
-  height: 100%;
+* {
+  box-sizing: border-box;
+}
+
+body{
     margin: 0;
     padding: 0;
-    font-family: "arial, serif";
+    font-family: 'Lora', serif;
 
 }
 
-.page-wrapper {
+/* .page-wrapper {
 min-height: 100%;
 
-}
+} */
 
-    .nav {
+/* .nav {
         background-color: white;
         color: black;
         list-style: none;
@@ -37,13 +40,84 @@ padding: 0 25px 0 25px;
 
     color: burlywood; 
 
+} */
+/* Header starts here */
+
+header {
+background: rgb(34, 33, 33);
+height: 66px;
 }
 
-.logo {
-
-    float: left;
-    padding-left: 25px;
+header * {
+  color: white;
 }
+
+header .logo {
+  float: left;
+  height: inherit;
+  margin-left: 2em;
+  padding-left: 25px;
+}
+
+header ul {
+  float: right;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+header ul li {
+  float: left;
+  position: relative;
+}
+
+header ul li ul {
+  position: absolute;
+  top: 66px;
+  right: 0px;
+  width: 180px;
+  display: none;
+}
+
+header ul li:hover ul{
+  display: block;
+}
+
+header ul li ul li {
+  width: 100%;
+}
+
+header ul li ul li a{
+  padding: 10px;
+  background: white;
+  color: rgb(7, 7, 7);
+}
+
+header ul li ul li a:hover {
+  background: lightgrey;
+}
+
+header ul li ul li a.logout {
+  color: red;
+}
+
+header ul li a {
+  display: block;
+  padding: 21px;
+  font-size: 1em;
+  text-decoration: none;
+}
+
+header ul li a:hover {
+  background: grey;
+  transition: 0.5s;
+}
+
+header .menu-toggle {
+  display: none;
+}
+
+/* Header ends here */
 
 
 * {
@@ -51,6 +125,8 @@ padding: 0 25px 0 25px;
   }
   
   body {
+    padding: 0px;
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
   }
@@ -423,10 +499,62 @@ padding-top: 20px;
 
 
  /* Responsive columns */
- @media only screen and (max-width: 600px) {
+ @media only screen and (max-width: 750px) {
   .column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
   }
+
+  header {
+   position: relative;
+  }
+
+  header ul {
+  width: 100px;
+  background: rgb(68, 68, 68);
+  max-height: 0px;
+  overflow: hidden;
+  }
+
+  .showing {
+    max-height: 100em;
+  }
+
+  header ul li {
+    width: 100%;
+  }
+
+  header ul li ul {
+    position: static;
+    display: block;
+    width: 100%;
+    background: inherit;
+  }
+  header ul li ul li a{
+    padding: 10px;
+    background: rgb(68, 68, 68);
+    color: white;
+    padding-left: 50px;
+  }
+  
+  header ul li ul li a.logout {
+    color: red;
+  }
+
+  header .menu-toggle {
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    font-size: 1.9em;
+  }
+
+  header .logo {
+    float: left;
+    height: inherit;
+    margin-left: .8em;
+    padding-left: 25px;
+  }
+
 }
