--- a/style.css
+++ b/style.css
@@ -9,38 +9,6 @@ body{
 
 }
 
-/* .page-wrapper {
-min-height: 100%;
-
-} */
-
-/* .nav {
-        background-color: white;
-        color: black;
-        list-style: none;
-        text-align: right;
-        padding: 20px 0 20px 0;
-        
-    }
-
-.nav li {
-display: inline-block;
-padding: 0 25px 0 25px;
-
-
-}
-.nav li a {
-
-    text-decoration: none;
-    color: black;
-
-}
-
-.nav li a:hover {
-
-    color: burlywood; 
-
-} */
 /* Header starts here */
 
 header {
@@ -124,12 +92,12 @@ header .menu-toggle {
     box-sizing: border-box;
   }
   
-  body {
+  /* body {
     padding: 0px;
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-  }
+  } */
   
   /* Float four columns side by side */
   .column {
@@ -183,7 +151,19 @@ float: right;
 .btn:hover {
 color: rgb(128, 79, 16) !important;
 background: lightgray;
+}
 
+.text-input {
+padding: .7rem 1rem;
+display: block;
+width: 100%;
+border-radius: 5px;
+border: 1px solid lightgray;
+outline: none;
+color: wheat;
+line-height: 1.5rem;
+font-size: 1.2em;
+font-family: 'Lora', serif;
 }
 
 .content {
@@ -240,8 +220,39 @@ margin: 20px;
 .content .sidebar {
 width: 30%;
 float: left;
-border: 1px dashed green;
-height: 300px;
+}
+
+.content .sidebar .section{
+  background: rgb(243, 243, 243);
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.content .sidebar .section.search{
+  margin-top: 80px;
+}
+
+.content .sidebar .section.topics ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  border-top: 1px solid rgb(219, 219, 219);
+}
+
+.content .sidebar .section.topics ul li a {
+display: block;
+text-decoration: none;
+padding: 15px 0px 15px 0px;
+border-bottom: 1px solid rgb(219, 219, 219);
+transition: all 0.3s;
+
+}
+
+.content .sidebar .section.topics ul li a:hover {
+padding-left: 10px;
+transition: all 0.3s;
+
 }
 
 /* User profile card starts  */
@@ -285,115 +296,6 @@ height: 300px;
 
 
 /* User profile card ends */
-
-
-/* calculator starts  */
-
-/* .calc {
-  text-align: center;
-}
- 
-.calc-box  {  
-background-color:#0c0f0e;  
-height:300px;  
-width:250px;  
-border-radius:10px;  
-position:relative;  
-top:80px;  
-left:40%;  
-} 
-
-.calc-display  
-{  
-background-color:#222;  
-width:220px;  
-position:relative;  
-left:15px;  
-top:20px;  
-height:40px;  
-}  
-
-.calc-display input  
-{  
-position:relative;  
-left:2px;  
-top:2px;  
-height:35px;  
-color:black;  
-background-color:#bccd95;  
-font-size:21px;  
-text-align:right;  
-}
-
-.calc-keys  
-{  
-position:relative;  
-top:15px;  
-}  
-.button  
-{  
-width:40px;  
-height:30px;  
-border:none;  
-border-radius:8px;  
-margin-left:17px;  
-cursor:pointer;  
-border-top:2px solid transparent;  
-}  
-.button.gray  
-{  
-color:white;  
-background-color:#6f6f6f;  
-border-bottom:black 2px solid;  
-border-top:2px #6f6f6f solid;  
-}  
-.button.pink  
-{  
-color:black;  
-background-color:#ff4561;  
-border-bottom:black 2px solid;  
-}  
-.button.black  
-{  
-color:white;  
-background-color:303030;  
-border-bottom:black 2px solid;  
-border-top:2px 303030 solid;  
-}  
-.button.orange  
-{  
-color:black;  
-background-color:FF9933;  
-border-bottom:black 2px solid;  
-border-top:2px FF9933 solid;  
-}  
-.gray:active  
-{  
-border-top:black 2px solid;  
-border-bottom:2px #6f6f6f solid;  
-}  
-.pink:active  
-{  
-border-top:black 2px solid;  
-border-bottom:#ff4561 2px solid;  
-}  
-.black:active  
-{  
-border-top:black 2px solid;  
-border-bottom:#303030 2px solid;  
-}  
-.orange:active  
-{  
-border-top:black 2px solid;  
-border-bottom:FF9933 2px solid;  
-}  
-.calc-keys p {  
-line-height:10px;  
-}  */
-
-/* calculator ends */
-
-
 
 
 
@@ -489,7 +391,6 @@ position: absolute;
 bottom: 0px;
 left: 0px;
 padding-top: 20px;
-
 }
 
 
@@ -497,9 +398,51 @@ padding-top: 20px;
 
 
 
+ /* Media Queries */
 
- /* Responsive columns */
- @media only screen and (max-width: 950px) {
+ @media only screen and (max-width: 934px){
+  .content {
+    width: 100%;
+  }
+
+  .content .main-content {
+    width: 100%;
+    padding: 10px;
+    }
+
+    .content .sidebar {
+      width: 100%;
+      padding: 10px;
+      }
+    .content .sidebar .section.search{
+      margin-top: 30px;
+      }
+
+      .content .main-content .post {
+        width: 100%;
+      }
+ }
+
+ /* footer */
+
+.footer {
+  height: auto;
+}
+
+.footer .footer-content {
+  height: auto;
+  flex-direction: column;
+}
+.footer .footer-content .contact-form{
+  padding-bottom: 90px;
+}
+
+.footer .footer-content .contact-form .contact-btn{
+  width: 100%;
+}
+
+
+ @media only screen and (max-width: 750px) {
 
   header {
    position: relative;
@@ -558,4 +501,26 @@ padding-top: 20px;
     margin-bottom: 20px;
   }
 
+}
+
+
+@media only screen and (max-width: 600px){
+
+  .content .main-content .post {
+    height: auto;
+  }
+
+  .content .main-content .post .post-image {
+    width: 100%;
+  }
+  
+  .content .main-content .post .post-preview {
+    width: 100%;
+  }
+  .content .main-content .post .read-more {
+    position: static;
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
 }
