--- a/calc.css
+++ b/calc.css
@@ -1,95 +1,58 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  
-  .container {
-    width: 400px;
-    margin: auto;
-  }
-  
-  .calc-body {
-    width: 275px;
-    margin: auto;
-    min-height: 400px;
-    border: solid 1px #3A4655;
-    box-shadow: 0 8px 50px -7px black;
-  }
-  
-  .calc-screen {
-    background: #3A4655;
-    width: 100%;
-    height: 150px;
-    padding: 20px;
-  }
-  .text-input {
-    padding: .7rem 1rem;
-    display: block;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid lightgray;
-    outline: none;
-    color: wheat;
-    line-height: 1.5rem;
-    font-size: 1.2em;
-    font-family: 'Lora', serif;
-    }
-  
-  .calc-operation {
-    text-align: right;
-    color: #727B86;
-    font-size: 21px;
-    padding-bottom: 20px;
-    border-bottom: dotted 1px;
-  }
-  
-  .calc-typed {
-    margin-top: 20px;
-    font-size: 45px;
-    text-align: right;
-    color: #fff;
-  }
-  
-  .calc-button-row {
-    width: 100%;
-    background: #3C4857;
-  }
-  
-  .button {
-    width: 25%;
-    background: #425062;
-    color: #fff;
-    padding: 20px;
-    display: inline-block;
-    font-size: 25px;
-    text-align: center;
-    vertical-align: middle;
-    margin-right: -4px;
-    border-right: solid 2px #3C4857;
-    border-bottom: solid 2px #3C4857;
-    border-radius: 20%;
+.calc-main{
+	background-color: #404D5E;
+	margin: 50px;
+	width: 330px;
+	height: auto;
+	margin: 100px auto;			/* horizontally centreing an element */
+	border-radius: 10px;
+	padding: 10px;
+	box-shadow: 0 8px 50px -7px black;
+}
+
+.calc-header{
+	background-color: #d1e0e0;
+	width: 300px;
+	height: 60px;
+	border-radius: 20px;
+	margin: 0 auto;	
+	font-size: xx-large;
+	color: #000000;
+	text-align: center;
+
+}
+
+table{
+	text-align: center;
+	width: 280px;
+	background-color:#404D5E;
+	margin: auto;
+	margin-top: 20px;
+	/* margin-right: 10px;
+	margin-left: 10px; */
+	border-radius: 20px;
+	
+}
+
+td{
+	color: white;
+	width: 40px;
+	height: 50px;
+	text-align: center;
+	/* font-size: xx-large; */
+	/* border: 1px solid red; */
+	border-radius: 20px;
+	background:#475466;
+	font-size: 25px;
     transition: all 0.2s ease-in-out;
-  }
-  
-  .button.l {
-    color: #AEB3BA;
-    background: #04469c;
-  }
-  
-  .button.c {
-    color: #D95D4E;
-    background: #404D5E;
-  }
-  
-  .button:hover {
-    background: #E0B612;
-  }
-  
-  .button.c:hover,
-  .button.l:hover {
-    background: #E0B612;
+
+}
+
+.orange{
+	color: #AEB3BA;
+	background-color: #04469c;
+}
+
+td:hover{
+	background: #E0B612;
     color: #fff;
-  }
-  
- 
+}
